--- a/tgcf.config.yml
+++ b/tgcf.config.yml
@@ -11,7 +11,7 @@
 
 forwards:
   # this section defines all the sources and destinations
-  - source: -1001417307692 # username/link/chatid of the source
+  - source: -1001383584373 # username/link/chatid of the source
     dest: [-1001539398084] # list of chat ids of the destinations
     # me means, the messages will be saved in your Saved Messages in telegram
     offset: 0 # from where to start (0 means from the first message of source)
@@ -28,7 +28,7 @@ plugins:
   # specify the plugins you want to use
   filter:
     text:
-      blacklist: ["@nairobi_youth_admin", "t.me"]
+      blacklist: ["t.me"]
 
 # read full documentation of plugins here https://git.io/J3NuC
 
